# VSAV_MatchDB

./: .env.api  .env.api.dummy  .env.bot  .env.bot.dummy  .env.db  .env.pgadmin  .env.pgadmin.dummy  .gitignore  Dockerfile  README.md  command_parser.py  commands.py  compose-up.sh  csvparser.py  docker-compose.yml  keep_alive.py  main.py  matchDB.json  match_db.csv  pyproject.toml  remove_local_volumes.sh
api/: Dockerfile  main.py  manage.py  pyproject.toml  run_manage_locally.sh  start_server.sh
api/constants/: errors.py
api/matchdb/: asgi.py  settings.py  urls.py  wsgi.py
api/matchdb/constants/: errors.py
api/matchdb/matches/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
api/matchdb/matches/migrations/: 0001_initial.py  0002_alter_matchinfo_p1_name_alter_matchinfo_p2_name.py  0002_initial.py  0002_match_info_timestamp.py  0003_alter_matchinfo_p1_name_alter_matchinfo_p2_name.py  0004_match_info_added_by.py  0005_alter_match_info_added_by.py  0006_alter_match_info_added_by.py  0007_rename_winner_match_info_winning_char.py  0008_rename_match_info_matchinfo.py  0010_alter_matchinfo_date_uploaded_and_more.py
api/matchdb/matches/util/: alias_handler.py  csvparser.py  match_db.csv  youtube.py
api/matchdb/users/: admin.py  apps.py  models.py
api/matchdb/users/migrations/: 0001_initial.py
api/matches/: enums.py  models.py  serializers.py  urls.py  views.py
api/matches/migrations/: 0003_match_info_video_title.py  0009_remove_matchinfo_entry_created_at_and_more.py  0011_alter_matchinfo_winning_char_and_more.py
api/matches/models/: match_info.py
api/matches/templates/: test.html
api/matches/util/: csvparser.py
api/vsav_match_api/: apps.py  models.py  urls.py  views.py
api/vsav_match_api/migrations/: 0001_initial.py
api/vsav_match_api/templates/: test.html
bot/: Dockerfile  help_command.py  main.py  pretty_print.py  pyproject.toml  spreadsheet_db.json  validators.py
bot/commands/: get_event_by_name.py  get_events.py  get_players.py  get_valid_character_names.py  remove_tag_from_video.py
bot/validators/: field_validator.py
config/: .env.api.dummy  .env.db.dummy
pgadmin/: Dockerfile  pgpass  pgpass.dummy  servers.json  servers.json.dummy
templates/: bundle.js  index.html  template.html
