[tool.poetry]
name = "matchdb_api"
version = "0.1.0"
description = "An API for accessing match. Study hard!"
authors = ["N-Bee <jeffrey.m.rivera@gmail.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
Django = "^4.0.2"
psycopg2-binary = "^2.9.3"
django-debug-toolbar = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
