[tool.poetry]
name = "matchdb_api"
version = "0.1.0"
description = "An API for accessing match. Study hard!"
authors = ["N-Bee <jeffrey.m.rivera@gmail.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
Django = "^4.0.2"
psycopg2-binary = "^2.9.3"
django-debug-toolbar = "^3.2.4"
google-api-python-client = "^2.37.0"
google-auth-oauthlib = "^0.4.6"
google-auth-httplib2 = "^0.1.0"
djangorestframework = "^3.13.1"
drf-extensions = "^0.7.1"
Markdown = "^3.3.6"
coreapi = "^2.3.3"
djangorestframework-simplejwt = "^5.0.0"
django-filter = "^21.1"
django-cors-headers = "^3.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
